# dataforge

./: .gitattributes  .gitignore  .npmrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE-MIT  README.md  RFC-0001-DATAFORGE-FOUNDATION-AND-ROADMAP-v2.md  RFC-0001-DATAFORGE-FOUNDATION-AND-ROADMAP.md  SECURITY.md  deny.toml  package.json  pnpm-lock.yaml  rust-toolchain.toml
.cargo/: config.toml
.codex/config/: README.md
.codex/prompts/: README.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/daemon/: README.md
apps/desktop/: eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
crates/df-ai/: Cargo.toml
crates/df-ai/src/: engine.rs  lib.rs  provider.rs  redaction.rs  schema.rs  tests.rs  types.rs
crates/df-db/: Cargo.toml
crates/df-db/migrations/: 0001_foundation.sql  0002_inventory.sql  0003_planning.sql  0004_execution_manifest.sql  0005_path_identity.sql  0006_representatives.sql  0006_structure.sql  0007_contexts.sql  0008_representatives.sql  0009_tree_relations.sql  0010_structural_review.sql  0011_derived_evidence_seal.sql  0012_execution_partial_lease.sql  0013_content_similarity.sql  0014_content_intelligence.sql  0015_hash_queue_index.sql  0016_media_intelligence.sql  0017_plugin_ecosystem.sql  0018_assistance_audit.sql  0019_incremental_reuse.sql
crates/df-db/src/: analysis.rs  assistance.rs  context.rs  dedup.rs  extraction.rs  integrity.rs  inventory.rs  lib.rs  media.rs  migrations.rs  plans.rs  plugins.rs  repository.rs  similarity.rs  structure.rs
crates/df-domain/: Cargo.toml
crates/df-domain/src/: analysis.rs  content.rs  context.rs  duplicate_policy.rs  event.rs  extraction.rs  fingerprint.rs  ids.rs  inventory.rs  lib.rs  manifest.rs  media.rs  occurrence.rs  plan.rs  plugins.rs  profile.rs  project.rs  raw_path.rs  similarity.rs  snapshot.rs  source_root.rs  state.rs  structure.rs
crates/df-error/: Cargo.toml
crates/df-executor/: Cargo.toml
crates/df-executor/src/: lib.rs
crates/df-extract/: Cargo.toml
crates/df-extract/src/: archive.rs  formats.rs  lib.rs  limits.rs  mail.rs  normalize.rs  pdf_worker.rs  tests.rs  worker_protocol.rs  zip_safety.rs
crates/df-facade/: Cargo.toml
crates/df-facade/src/: ai_transport.rs  lib.rs  secrets.rs
crates/df-facade/tests/: ai_pipeline.rs  plugin_pipeline.rs
crates/df-fs-safety/: Cargo.toml
crates/df-fs-safety/src/: lib.rs
crates/df-hash/: Cargo.toml
crates/df-hash/src/: lib.rs
crates/df-ledger/: Cargo.toml
crates/df-ledger/src/: lib.rs
crates/df-media/: Cargo.toml
crates/df-media/src/: compare.rs  engine.rs  fingerprint.rs  lib.rs  project.rs  types.rs  worker_protocol.rs
crates/df-planner/: Cargo.toml
crates/df-plugin/: Cargo.toml
crates/df-plugin/src/: contract.rs  error.rs  host.rs  lib.rs  project.rs  registry.rs  tests.rs
crates/df-plugin/wit/: plugin.wit
crates/df-process-safety/: Cargo.toml
crates/df-process-safety/src/: lib.rs
crates/df-query/: Cargo.toml
crates/df-query/src/: isolated.rs  lib.rs  worker_protocol.rs
crates/df-report/: Cargo.toml
crates/df-report/src/: lib.rs
crates/df-scan/: Cargo.toml
crates/df-scan/src/: lib.rs
crates/df-search/: Cargo.toml
crates/df-search/src/: lib.rs
crates/df-similarity/: Cargo.toml
crates/df-similarity/src/: lib.rs
crates/df-verifier/: Cargo.toml
crates/df-verifier/src/: lib.rs
docs/: accessibility.md  environment-report.md
docs/adr/: ADR-0001-rust-core.md  ADR-0002-sqlite-source-of-truth.md  ADR-0003-origin-immutable.md  ADR-0011-windows-user-space-toolchain.md  ADR-0012-node-and-pnpm-policy.md  ADR-0013-development-plugins.md  ADR-0014-codex-skills-policy.md  ADR-0015-inventory-increment-scan-hash.md  ADR-0016-plan-execute-verify-increment.md  ADR-0017-minimal-reports.md  ADR-0017-secure-filesystem-boundary.md  ADR-0018-folder-merkle-signatures.md  ADR-0018-immutable-execution-manifest.md  ADR-0019-file-fingerprint-v2.md  ADR-0019-folder-context-classification.md  ADR-0020-duplicate-logical-representative.md  ADR-0020-raw-path-representation.md  ADR-0021-platform-no-replace-finalization.md  ADR-0022-atomic-project-initialization.md  ADR-0023-folder-merkle-signatures.md  ADR-0024-folder-context-classification.md  ADR-0025-duplicate-logical-representative.md  ADR-0026-declarative-profiles.md  ADR-0027-bounded-tree-relations.md  ADR-0028-declarative-rules-anomalies-review.md  ADR-0029-analysis-completion-and-phase-recovery.md  ADR-0030-streaming-content-similarity.md  ADR-0031-content-intelligence-isolated-derived-artifacts.md  ADR-0032-bounded-media-intelligence.md  ADR-0033-plugin-ecosystem-integration.md  ADR-0034-assisted-intelligence-byok.md  ADR-0035-incremental-snapshots.md  ADR-0036-nas-hardening.md  ADR-0037-frozen-contracts.md  README.md  (+5 more)
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: extract_worker_response.rs  fingerprint_parse.rs  raw_path_from_blob.rs  safe_relative_path.rs
plugins/: README.md
scripts/: bootstrap-windows.ps1  check-environment.ps1  generate-sbom.py  install-dev-plugins.ps1  install-dev-tools.ps1  verify-toolchain.ps1
tools/df-corpus/: Cargo.toml
tools/df-corpus/src/: lib.rs  main.rs
tools/df-corpus/tests/: scale_pipeline.rs
tools/df-extract-worker/: Cargo.toml
tools/df-extract-worker/src/: main.rs
tools/df-extract-worker/tests/: worker_integration.rs
tools/df-extract-worker/tests/fixtures/: invalid-response-worker.cmd  timeout-worker.cmd
tools/df-media-worker/: Cargo.toml
tools/df-media-worker/src/: main.rs  worker.rs
tools/df-media-worker/tests/: media_integration.rs  project_pipeline.rs
tools/df-query-worker/: Cargo.toml
tools/df-query-worker/src/: main.rs
tools/df-query-worker/tests/: worker_integration.rs
(+89 files in other folders)
