[workspace]
resolver = "2"
members = [
    "crates/df-error",
    "crates/df-domain",
    "crates/df-ledger",
    "crates/df-db",
    "crates/df-scan",
    "crates/df-hash",
    "crates/df-planner",
    "crates/df-executor",
    "crates/df-verifier",
    "crates/df-report",
    "crates/df-facade",
    "apps/cli",
    "apps/desktop/src-tauri",
]
# The desktop shell is excluded from default builds because it needs the
# platform webview toolchain; CI and `pnpm tauri build` cover it explicitly.
default-members = [
    "crates/df-error",
    "crates/df-domain",
    "crates/df-ledger",
    "crates/df-db",
    "crates/df-scan",
    "crates/df-hash",
    "crates/df-planner",
    "crates/df-executor",
    "crates/df-verifier",
    "crates/df-report",
    "crates/df-facade",
    "apps/cli",
]

[workspace.package]
version = "0.0.1-dev"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/luiscor/dataforge"
authors = ["Luis Cordero / Luiscor IT Services"]
rust-version = "1.82"

[workspace.dependencies]
# Internal crates
df-error = { path = "crates/df-error" }
df-domain = { path = "crates/df-domain" }
df-ledger = { path = "crates/df-ledger" }
df-db = { path = "crates/df-db" }
df-scan = { path = "crates/df-scan" }
df-hash = { path = "crates/df-hash" }
df-planner = { path = "crates/df-planner" }
df-executor = { path = "crates/df-executor" }
df-verifier = { path = "crates/df-verifier" }
df-report = { path = "crates/df-report" }
df-facade = { path = "crates/df-facade" }

# External crates
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.37", features = ["bundled"] }
sha2 = "0.10"
blake3 = "1"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
# Keep debug builds reasonably fast on the bundled SQLite C sources.
opt-level = 0
