[workspace]
resolver = "2"
members = [
    "crates/df-error",
    "crates/df-domain",
    "crates/df-fs-safety",
    "crates/df-ledger",
    "crates/df-db",
    "crates/df-scan",
    "crates/df-hash",
    "crates/df-planner",
    "crates/df-executor",
    "crates/df-verifier",
    "crates/df-facade",
    "apps/cli",
    "apps/desktop/src-tauri",
]
# The desktop shell is excluded from default builds because it needs the
# platform webview toolchain; CI and `pnpm tauri build` cover it explicitly.
default-members = [
    "crates/df-error",
    "crates/df-domain",
    "crates/df-fs-safety",
    "crates/df-ledger",
    "crates/df-db",
    "crates/df-scan",
    "crates/df-hash",
    "crates/df-planner",
    "crates/df-executor",
    "crates/df-verifier",
    "crates/df-facade",
    "apps/cli",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/luiscor/dataforge"
authors = ["Luis Cordero / Luiscor IT Services"]
rust-version = "1.82"

[workspace.dependencies]
# Internal crates
df-error = { path = "crates/df-error", version = "0.2.0" }
df-domain = { path = "crates/df-domain", version = "0.2.0" }
df-fs-safety = { path = "crates/df-fs-safety", version = "0.2.0" }
df-ledger = { path = "crates/df-ledger", version = "0.2.0" }
df-db = { path = "crates/df-db", version = "0.2.0" }
df-scan = { path = "crates/df-scan", version = "0.2.0" }
df-hash = { path = "crates/df-hash", version = "0.2.0" }
df-planner = { path = "crates/df-planner", version = "0.2.0" }
df-executor = { path = "crates/df-executor", version = "0.2.0" }
df-verifier = { path = "crates/df-verifier", version = "0.2.0" }
df-facade = { path = "crates/df-facade", version = "0.2.0" }

# External crates
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.37", features = ["bundled"] }
sha2 = "0.10"
blake3 = "1"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
# Keep debug builds reasonably fast on the bundled SQLite C sources.
opt-level = 0
