[package]
name = "dataforge-cli"
description = "DataForge command line interface"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "dataforge"
path = "src/main.rs"

[dependencies]
df-error = { workspace = true }
df-domain = { workspace = true }
df-facade = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
