[package]
name = "df-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
df-process-safety.workspace = true
hex.workspace = true
jsonschema = { version = "=0.33.0", default-features = false }
regex = { version = "=1.13.0", default-features = false, features = ["perf", "std", "unicode-perl"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
