[package]
name = "df-facade"
description = "Stable local API of the DataForge engine; every client (CLI, desktop) goes through this crate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
df-error = { workspace = true }
df-domain = { workspace = true }
df-fs-safety = { workspace = true }
df-db = { workspace = true }
df-ledger = { workspace = true }
df-scan = { workspace = true }
df-hash = { workspace = true }
df-planner = { workspace = true }
df-executor = { workspace = true }
df-verifier = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
