[package]
name = "df-media"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
df-db.workspace = true
df-domain.workspace = true
df-error.workspace = true
df-fs-safety.workspace = true
df-process-safety.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
rusty-chromaprint = "=0.3.0"
