[package]
name = "df-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
df-db.workspace = true
df-domain.workspace = true
df-error.workspace = true
ed25519-dalek = { version = "=2.2.0", default-features = false, features = ["fast", "std", "zeroize"] }
hex.workspace = true
jsonschema = { version = "=0.33.0", default-features = false }
semver = "=1.0.27"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
# 36.0.12 clears the 2026-07 RUSTSEC batch (0085-0095: component-model
# transcoding OOB, Winch sandbox escapes, table allocation panics) while
# staying on the 36 LTS line. Do not downgrade below 36.0.8.
wasmtime = { version = "=36.0.12", default-features = false, features = ["component-model", "cranelift", "runtime", "std", "wat"] }

[dev-dependencies]
rand_core = { version = "=0.6.4", features = ["getrandom"] }
