[package]
name = "df-report"
description = "Versioned exports of plans, verification manifests and duplicate evidence (RFC-0001 §35, §36)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
df-error = { workspace = true }
df-domain = { workspace = true }
df-db = { workspace = true }
df-ledger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
df-scan = { workspace = true }
df-hash = { workspace = true }
df-planner = { workspace = true }
df-executor = { workspace = true }
df-verifier = { workspace = true }
tempfile = { workspace = true }
