[package]
name = "df-verifier"
description = "Independent verification of executed plans: hashes, coverage, partials, untracked files, origin integrity (RFC-0001 §28)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
df-error = { workspace = true }
df-domain = { workspace = true }
df-fs-safety = { workspace = true }
df-db = { workspace = true }
df-planner = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
df-db = { workspace = true, features = ["test-support"] }
df-scan = { workspace = true }
df-hash = { workspace = true }
df-executor = { workspace = true }
df-ledger = { workspace = true }
tempfile = { workspace = true }
