[package]
name = "df-extract-worker"
description = "Resource-isolated PDF parser process for DataForge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
df-extract.workspace = true
pdf-extract.workspace = true

[dev-dependencies]
chrono.workspace = true
df-domain.workspace = true
sha2.workspace = true
zip.workspace = true
