[package]
name = "df-query-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
df-query.workspace = true
df-db.workspace = true
df-domain.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true

[dev-dependencies]
arrow-array.workspace = true
arrow-schema.workspace = true
parquet.workspace = true
sha2.workspace = true
hex.workspace = true
tempfile.workspace = true
